services/paperless/k8s/base/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless
  name: paperless
spec:
  ports:
    - name: paperless
      port: 8000
      protocol: TCP
      targetPort: 8000
      nodePort: 30800
  selector:
    app: paperless
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless-redis
  name: paperless-redis
spec:
  ports:
    - name: paperless-redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: paperless-redis
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless-postgres
  name: paperless-postgres
spec:
  ports:
    - name: paperless-postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: paperless-postgres
  type: ClusterIP
